# FaceVision-Toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_video_source.py
config/: config.example.yaml
docs/: architecture.md  camera-flow.md  camera-setup.md  design-decisions.md  engineering-model.md  keyboard-controls.md  opencv-pipeline.md  privacy.md  quality-gates.md  roadmap.md  testing-strategy.md  troubleshooting.md  usage.md
docs/architecture/: component-boundaries.md  detection-pipeline.md  system-overview.md
docs/decisions/: ADR-001-why-opencv.md  ADR-002-why-haar-cascade.md  ADR-003-why-cli-first.md  ADR-004-why-local-processing.md
docs/operations/: deployment.md  release-process.md  troubleshooting.md
docs/product/: future-extensions.md  limitations.md  roadmap.md
docs/security/: privacy-model.md  (+1 more)
examples/: commands.txt  error-camera-not-found.txt  facevision-toolkit.service  output-structure.txt  run-default-camera.txt  run-external-camera.txt  run-video-file.txt  sample-console-output.txt  sample-error-camera-not-found.txt  sample-error-cascade-not-found.txt
facevision-tracker/: CHANGELOG.md  README.md  main.py
scripts/: validate_project.py
tests/: conftest.py  test_camera.py  test_cli.py  test_detector.py  test_processing.py  test_project_validation.py  test_runtime_helpers.py
(+23 files in other folders)
