[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "facevision-tracker"
version = "1.1.0"
description = "Local OpenCV face and eye detection tracker for webcam and video sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Yakup24" }
]
dependencies = [
  "opencv-python>=4.8.0",
  "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6"
]

[project.scripts]
facevision-tracker = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
